[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-add"
version = "0.1.0"
description = "A tiny CLI that adds two integers."
authors = [{ name = "Codex User", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
"codex-add" = "app:main"

[tool.setuptools]
py-modules = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
